Appplied Takaku's patch  [namazu-dev 91] Added a feature to treat ${namazu::counter}, ${namazu::score} in NMZ.result Enabled --very-short to work

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,9 +9,9 @@ SUBDIRS = src
 pkgdatadir = @prefix@/@PACKAGE@
 
 install-data-local:
-	$(mkinstalldirs) $(DESTDIR)$(libdir)/index
+	$(mkinstalldirs) $(pkgdatadir)/index
 	for subdir in $(EXTRA_DIRS); do \
-	  cp -rp $(srcdir)/$$subdir $(DESTDIR)$(libdir); \
+	  cp -rp $(srcdir)/$$subdir $(pkgdatadir); \
 	done
 
 dist-hook:
