Applied Takaku's patch [namazu-dev 97]

--- a/Makefile.in
+++ b/Makefile.in
@@ -373,9 +373,9 @@ mostlyclean distclean maintainer-clean
 @SET_MAKE@
 
 install-data-local:
-	$(mkinstalldirs) $(DESTDIR)$(libdir)/index
+	$(mkinstalldirs) $(pkgdatadir)/index
 	for subdir in $(EXTRA_DIRS); do \
-	  cp -rp $(srcdir)/$$subdir $(DESTDIR)$(libdir); \
+	  cp -rp $(srcdir)/$$subdir $(pkgdatadir); \
 	done
 
 dist-hook:
