--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,8 +21,8 @@ bin_SCRIPTS = clnmz gcnmz mailutime mknmz rvnmz vfnmz wdnmz gtnmz
 
 namazu_SOURCES = cgi.c codeconv.c conf.c form.c hlist.c messages.c \
 	namazu.c output.c parser.c re_match.c regex.c search.c \
-	seed.c util.c values.c wakati.c result.l
-noinst_HEADERS = namazu.h regex.h util.h
+	seed.c util.c values.c wakati.c result.l getopt.c getopt1.c
+noinst_HEADERS = namazu.h regex.h util.h getopt.h
 
 ##################################################################
 
