--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,10 +19,13 @@ exec_prefix =	@prefix@/@PACKAGE@
 bin_PROGRAMS = namazu
 bin_SCRIPTS = clnmz gcnmz mailutime mknmz rvnmz vfnmz wdnmz gtnmz
 
-namazu_SOURCES = cgi.c codeconv.c conf.c form.c hlist.c messages.c \
-	namazu.c output.c parser.c re_match.c regex.c search.c \
-	seed.c util.c values.c wakati.c result.l getopt.c getopt1.c
-noinst_HEADERS = namazu.h regex.h util.h getopt.h
+namazu_SOURCES = cgi.c codeconv.c conf.c form.c hlist.c message.c \
+	namazu.c output.c parser.c re.c regex.c search.c \
+	seed.c util.c values.c wakati.c result.l getopt.c getopt1.c \
+	field.c usage.c
+noinst_HEADERS = namazu.h regex.h util.h getopt.h field.h codeconv.h \
+		 type.h enum.h variable.h form.h usage.h hlist.h \
+		 re.h output.h conf.h
 
 ##################################################################
 
