shut up some warnings

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -56,14 +56,22 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
+BZIP2 = @BZIP2@
+BZIP2_PATH = @BZIP2_PATH@
 CC = @CC@
 CHASEN = @CHASEN@
 EXEEXT = @EXEEXT@
 GROFF = @GROFF@
+GZIP = @GZIP@
+GZIP_PATH = @GZIP_PATH@
 KAKASI = @KAKASI@
 LEX = @LEX@
 LN_S = @LN_S@
+LV = @LV@
+LV_PATH = @LV_PATH@
 MAKEINFO = @MAKEINFO@
+MSWORDVIEW = @MSWORDVIEW@
+MSWORDVIEW_PATH = @MSWORDVIEW_PATH@
 NKF = @NKF@
 OPT_ADMIN_EMAIL = @OPT_ADMIN_EMAIL@
 OPT_CGI_LOCATION = @OPT_CGI_LOCATION@
@@ -72,6 +80,8 @@ OPT_HELPER_ZCAT = @OPT_HELPER_ZCAT@
 OPT_LANGUAGE = @OPT_LANGUAGE@
 OPT_WAKATI_DEFAULT = @OPT_WAKATI_DEFAULT@
 PACKAGE = @PACKAGE@
+PDFTOTEXT = @PDFTOTEXT@
+PDFTOTEXT_PATH = @PDFTOTEXT_PATH@
 PERL = @PERL@
 SCORING = @SCORING@
 VERSION = @VERSION@
