Remove wdnmz.in

--- a/Makefile.in
+++ b/Makefile.in
@@ -66,7 +66,11 @@ GZIP_PATH = @GZIP_PATH@
 KAKASI = @KAKASI@
 LEX = @LEX@
 LN_S = @LN_S@
+LV = @LV@
+LV_PATH = @LV_PATH@
 MAKEINFO = @MAKEINFO@
+MSWORDVIEW = @MSWORDVIEW@
+MSWORDVIEW_PATH = @MSWORDVIEW_PATH@
 NKF = @NKF@
 OPT_ADMIN_EMAIL = @OPT_ADMIN_EMAIL@
 OPT_CGI_LOCATION = @OPT_CGI_LOCATION@
@@ -75,6 +79,8 @@ OPT_HELPER_ZCAT = @OPT_HELPER_ZCAT@
 OPT_LANGUAGE = @OPT_LANGUAGE@
 OPT_WAKATI_DEFAULT = @OPT_WAKATI_DEFAULT@
 PACKAGE = @PACKAGE@
+PDFTOTEXT = @PDFTOTEXT@
+PDFTOTEXT_PATH = @PDFTOTEXT_PATH@
 PERL = @PERL@
 SCORING = @SCORING@
 VERSION = @VERSION@
@@ -390,11 +396,13 @@ dist-hook:
 	  rm -rf $(distdir)/$$subdir/CVS; \
 	done
 	rm -f $(distdir)/lib/conf.pl
-	rm -f $(distdir)/lib/gzip.pl
-	rm -f $(distdir)/lib/compress.pl
-	rm -f $(distdir)/lib/man.pl
-	rm -f $(distdir)/lib/rfc.pl
-	rm -f $(distdir)/lib/bzip2.pl
+	rm -f $(distdir)/filter/gzip.pl
+	rm -f $(distdir)/filter/compress.pl
+	rm -f $(distdir)/filter/man.pl
+	rm -f $(distdir)/filter/rfc.pl
+	rm -f $(distdir)/filter/bzip2.pl
+	rm -f $(distdir)/filter/pdf.pl
+	rm -f $(distdir)/filter/msword.pl
 
 rpm:
 	# put Namazu's tar-ball to a correct directory before do this
