--- a/configure.in
+++ b/configure.in
@@ -319,7 +319,7 @@ dnl * Output Files.
 dnl * 
 AM_CONFIG_HEADER(config.h)
 
-AC_OUTPUT([Makefile src/Makefile lib/conf.pl src/mknmz.pl src/wdnmz
+AC_OUTPUT([Makefile src/Makefile lib/conf.pl src/mknmz.pl
 filter/gzip.pl filter/compress.pl filter/man.pl filter/rfc.pl
 filter/bzip2.pl filter/msword.pl
 src/vfnmz src/gcnmz src/gtnmz src/mailutime src/clnmz src/rvnmz namazu.spec],
