--- a/Makefile.in
+++ b/Makefile.in
@@ -86,7 +86,7 @@ SCORING = @SCORING@
 VERSION = @VERSION@
 ZCAT = @ZCAT@
 EXTRA_DIST = README-ja namazu.spec.in
-EXTRA_DIRS = lib filter
+EXTRA_DIRS = lib filter template
 # EXTRA_DIRS = contrib doc lib misc
 SUBDIRS = src
 
