src/Makefile.am: Add an CLEANFILES entry. configure.in: Modify AC_OUTPUT according to removed files.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,11 +11,10 @@
 @SET_MAKE@
 LIBS = -lm @LEXLIB@
 
-##################################################################
-## Directories
-
 bin_PROGRAMS = namazu
-bin_SCRIPTS = clnmz gcnmz mailutime mknmz rvnmz vfnmz gtnmz
+bin_SCRIPTS = gcnmz mailutime mknmz gtnmz
+
+CLEANFILES = mknmz.pl $(bin_SCRIPTS)
 
 filterdir   = @datadir@/@PACKAGE@/@VERSION@/filter
 templatedir = @datadir@/@PACKAGE@/@VERSION@/template
